Add global banner/callout bar prototype
Similar to emergency publishing, in that for all other pages on GOV.UK
it's set via a layout in static, but is custom for the homepage.

The new bar shouldn't show when emergency publishing is active, to avoid
having too many horizontal notification bars on a single page, and
emergency publishing trumps all other cases.

--- a/app/assets/stylesheets/views/_homepage.scss
+++ b/app/assets/stylesheets/views/_homepage.scss
@@ -69,6 +69,19 @@ body.homepage {
   }
 }
 
+#global-bar-homepage {
+  padding: $gutter-half 0;
+  background-color: $light-blue-25;
+
+  .global-bar-homepage-message {
+    @extend %site-width-container;
+
+    @include core-19;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
 .root-index {
   // Generic objects for the homepage
   .inner-block {
