Add capability to render dynamic  start button text for SimpleSmartAnswers
As requested in this trello card https://trello.com/c/CUe4odRB/45-make-start-now-editable-in-simple-smart-answers
the need to add the capability to change the text of the start button for simple smart answers.

Here, I have defined a new method to the publication presenter called "start_button_text" a default text of "Start now"

Also updated already existing fixtures to fix tests

--- a/app/views/root/simple_smart_answer.html.erb
+++ b/app/views/root/simple_smart_answer.html.erb
@@ -6,7 +6,7 @@
   <div class="intro">
     <%= raw @publication.body %>
     <p class="get-started">
-      <a rel="nofollow" href="<%= smart_answer_flow_path(:slug => @publication.slug, :edition => @edition) %>" class="big button" role="button">Start now</a>
+      <a rel="nofollow" href="<%= smart_answer_flow_path(:slug => @publication.slug, :edition => @edition) %>" class="big button" role="button"><%= @publication.start_button_text %></a>
     </p>
   </div>
 <% end %>
