--- a/app/views/search/_popular_results_block.mustache
+++ b/app/views/search/_popular_results_block.mustache
@@ -3,14 +3,16 @@
     <div class="grid-row">
         <div class="column-half">
           <ol class="numbered-list">
-            <li>Fake result 1</li>
-            <li>Fake result 2</li>
+            <li>Department for Education spending review</li>
+            <li>Michael Gove to the National Conference of Directors of Children's and Adult Services</li>
+            <li>Voluntary and community organisations awarded £60 million grant</li>
           </ol>
         </div>
         <div class="column-half">
-          <ol class="numbered-list" start=2>
-            <li>Fake result 3</li>
-            <li>Fake result 4</li>
+          <ol class="numbered-list" start="4">
+            <li>Department for Education spending review</li>
+            <li>Michael Gove to the National Conference of Directors of Children's and Adult Services</li>
+            <li>Voluntary and community organisations awarded £60 million grant</li>
           </ol>
         </div>
     </div>
