--- a/app/views/search/_results_list.mustache
+++ b/app/views/search/_results_list.mustache
@@ -23,12 +23,12 @@
 
   <ol class="results-list{{#debug_score}} debug{{/debug_score}}" id="js-live-search-results" start="{{second_result_number}}">
     {{#results}}
-      {{#is_multiple_results}}
+      {{#is_multiple_result_sets}}
         {{>search/_sublist}}
-      {{/is_multiple_results}}
-      {{^is_multiple_results}}
+      {{/is_multiple_result_sets}}
+      {{^is_multiple_result_sets}}
         {{>search/_result}}
-      {{/is_multiple_results}}
+      {{/is_multiple_result_sets}}
     {{/results}}
   </ol>
 
