--- a/app/views/search/_popular_results_block.mustache
+++ b/app/views/search/_popular_results_block.mustache
@@ -3,16 +3,16 @@
   <div class="grid-row">
       <div class="column-half">
         <ol class="numbered-list">
-          <li>Department for Education spending review</li>
-          <li>Michael Gove to the National Conference of Directors of Children's and Adult Services</li>
-          <li>Voluntary and community organisations awarded £60 million grant</li>
+          {{#popular_results}}
+            <li><a href="{{link}}" {{#external}}rel="external"{{/external}}>{{{title}}}</a></li>
+          {{/popular_results}}
         </ol>
       </div>
       <div class="column-half">
         <ol class="numbered-list" start="4">
-          <li>Department for Education spending review</li>
-          <li>Michael Gove to the National Conference of Directors of Children's and Adult Services</li>
-          <li>Voluntary and community organisations awarded £60 million grant</li>
+          {{#popular_results}}
+            <li><a href="{{link}}" {{#external}}rel="external"{{/external}}>{{{title}}}</a></li>
+          {{/popular_results}}
         </ol>
       </div>
   </div>
