--- a/app/views/search/_popular_results_block.mustache
+++ b/app/views/search/_popular_results_block.mustache
@@ -3,16 +3,16 @@
   <div class="grid-row">
       <div class="column-half">
         <ol class="numbered-list">
-          {{#popular_results}}
+          {{#popular_results_1}}
             <li><a href="{{link}}" {{#external}}rel="external"{{/external}}>{{{title}}}</a></li>
-          {{/popular_results}}
+          {{/popular_results_1}}
         </ol>
       </div>
       <div class="column-half">
         <ol class="numbered-list" start="4">
-          {{#popular_results}}
+          {{#popular_results_2}}
             <li><a href="{{link}}" {{#external}}rel="external"{{/external}}>{{{title}}}</a></li>
-          {{/popular_results}}
+          {{/popular_results_2}}
         </ol>
       </div>
   </div>
