--- a/app/assets/stylesheets/views/_search.scss
+++ b/app/assets/stylesheets/views/_search.scss
@@ -350,7 +350,7 @@ main.no-results-term {
 .suggested-links-box {
   background: $govuk-blue;
   color: $white;
-  padding: 15px 5px 30px 35px;
+  padding: 15px 35px;
 
   h2 {
     @include bold-24;
@@ -369,6 +369,10 @@ main.no-results-term {
 
     li {
       padding-bottom: 15px;
+
+      a {
+        color: $white;
+      }
     }
   }
 }
