Change example title to sentence case.

--- a/app/views/search/_popular_results_block.mustache
+++ b/app/views/search/_popular_results_block.mustache
@@ -1,5 +1,5 @@
 <div class="suggested-links-box">
-  <h2>Popular Education Links</h2>
+  <h2>Popular education links</h2>
   <div class="grid-row">
       <div class="column-half">
         <ol class="numbered-list">
